Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret
Florian Faber
Michael Voigt
Torben Hohn  
Paul Davis
Peter L Jones
Devin Anderson
Josh Green
Mario Lang
Arnold Krille
Jan Engelhardt
Adrian Knoth
David Garcia Garzon
Valerio Pilo
Chris Caudle

---------------------------
  Jackdmp changes log
---------------------------

2011-06-29 Stephane Letz  <letz@grame.fr>

	* Special CATCH_CLOSE_EXCEPTION_RETURN to handle Close API calls. 

2011-06-28 Stephane Letz  <letz@grame.fr>

	* Another round of code improvements to handle completely buggy Digidesign CoreAudio user-land driver. 

2011-06-20 Stephane Letz  <letz@grame.fr>

	* Correct Dummy driver.

2011-06-17 Stephane Letz  <letz@grame.fr>

	* NetJack2 : connection error handling.

2011-06-16 Stephane Letz  <letz@grame.fr>

	* Changes in NetJack2 connection management: no more timeout, any transmission error considered as fatal.
	* NetJack2 : timeout again...

2011-06-11 Stephane Letz  <letz@grame.fr>

	* Special version of jack_attach_shm/jack_release_shm on client side for POSIX shared mem, to solve a memory leak issue.

2011-06-10 Stephane Letz  <letz@grame.fr>

	* SaveConnections/RestoreConnections in NetDriver.
	* SaveConnections/RestoreConnections moved in JackAudioDriver.

2011-06-09 Stephane Letz  <letz@grame.fr>

	* Correct NetJack2 connection handling

2011-05-27 Stephane Letz  <letz@grame.fr>

	* Correct rd_acquire in dbus code.

2011-05-16 Stephane Letz  <letz@grame.fr>

	* Correct OSX real-time thread setup.

2011-05-11 Stephane Letz  <letz@grame.fr>

	* Correct MIDI in NetJack2.

2011-05-05 Stephane Letz  <letz@grame.fr>

	* Libjacknet in progress.

2011-05-02 Stephane Letz  <letz@grame.fr>

	* Merge branch 'switch-master-port-registration-notifications : correct driver port registration.

2011-04-21 Stephane Letz  <letz@grame.fr>

	* CELT code for NetJack2.

2011-04-20 Stephane Letz  <letz@grame.fr>
