@@ -35,6 +35,10 @@ Chris Caudle
   Jackdmp changes log
 ---------------------------
 
+2011-07-01 Stephane Letz  <letz@grame.fr>
+
+	* Fix bugs in JackNetAdapter.
+
 2011-06-29 Stephane Letz  <letz@grame.fr>
 
 	* Special CATCH_CLOSE_EXCEPTION_RETURN to handle Close API calls. 
